k8s/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: kkmee0209/m-dev:redis_v1
        ports:
        - containerPort: 6379
        volumeMounts:
          - mountPath: /usr/local/etc/redis
            name: redis-conf
            readOnly: true
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf
