k8s/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: kkmee0209/m-dev:tomcat_latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
