k8s/tomcat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
spec:
  selector:
    app: tomcat
  ports:
  - port: 8080
    targetPort: 8080
